fixed a bunch of scaling issues. Everyhthing now resizes responsively without overlapping other elements.

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,6 @@
 #topbar{
     background-color:#222222;
 }
+#imgwall{
+    margin-top:70px;
+}
