--- a/css/home.scss
+++ b/css/home.scss
@@ -1,14 +1,7 @@
 
-#imgwall{
-    margin-top:-3%;
-}
+
 
 #everything{
     display:block;
 }
 /* Smartphones (portrait) ----------- */
-@media only screen and (max-width: 1200px) {
-    #imgwall {
-        margin-top:8%;
-    }
-}
