--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,6 @@
+#wrapper{
+  display:relative;
+}
 h1 {
   font-family: 'Roboto Mono', monospace;
   font-size: 2.5em;
